# mini-nucleiq-code-challenge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  TASK.md  pyproject.toml  repomix.config.json
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/rules/: architecture.md  python.md
.github/workflows/: ci.yml
scripts/: smoke.py
src/mini_nucleiq/: __init__.py  logging_config.py  retry.py  settings.py
src/mini_nucleiq/adapters/: http_sample_repository.py
src/mini_nucleiq/api/: app.py  dependencies.py  dto.py  errors.py
src/mini_nucleiq/api/routes/: analyze.py  health.py
src/mini_nucleiq/application/: analyze_sample.py
src/mini_nucleiq/domain/: __init__.py  algorithms.py  analysis.py  errors.py  registry.py  sample.py
src/mini_nucleiq/ports/: sample_repository.py
tests/: test_retry.py  test_settings.py  test_smoke.py
tests/adapters/: test_http_sample_repository.py
tests/api/: test_analyze_endpoint.py
tests/application/: test_analyze_sample.py
tests/domain/: test_algorithms.py  test_analysis.py  test_registry.py  test_sample.py
tests/integration/: test_live_samples_api.py
